# sound-processor

./: .gitignore  CMakeLists.txt  README.md  converter.cpp  converter.h  create-so  header.h  main.cpp  rw.cpp  rw.h  wav.cpp  wav.h  wav_commander.cpp  wav_commander.h  wav_rw.cpp  wav_rw.h
